SalesForce/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>AssetPrice__c</fullName>
        <label>AssetPrice</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetSerialNo__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>AssetSerialNo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Chekbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chekbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Master</label>
        <referenceTo>Item_Master__c</referenceTo>
        <relationshipLabel>Assets Master</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AssetName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>